fix header logo dimensions on mobile again

--- a/scss/_module.scss
+++ b/scss/_module.scss
@@ -41,9 +41,9 @@
       img {
         // max-width: 300px !important;
         max-height: 100% !important;
-        @media all and (min-width: 769px){
-          max-width: 300px !important;
-        }
+        // @media all and (min-width: 769px){
+        //   max-width: 300px !important;
+        // }
       }
 
     }
